--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mantine/form": "^5.10.3",
     "@typegoose/typegoose": "^10.1.1",
+    "@types/uuid": "^9.0.0",
     "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "mongoose-slug-generator": "^1.0.4",
     "nanoid": "^4.0.1",
     "pino": "^8.10.0",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6",
     "zod-express-middleware": "^1.4.0"
   },
