--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "@mantine/form": "^5.10.3",
     "@typegoose/typegoose": "^10.1.1",
     "@types/uuid": "^9.0.0",
+    "body-parser": "^1.20.1",
     "busboy": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
